--- a/task-web/src/styles.scss
+++ b/task-web/src/styles.scss
@@ -1,7 +1,26 @@
+@import '~bootstrap/dist/css/bootstrap.min.css';
 @import "primeng/resources/themes/lara-light-blue/theme.css";
 @import "primeng/resources/primeng.css";
 @import "primeicons/primeicons.css";
 
 :root {
   font-family: var(--font-family);
+}
+
+.top-bar {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+
+.table-loader {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  min-height: 100px;
+  width: 100%;
 }
