--- a/task-web/src/app/app.component.scss
+++ b/task-web/src/app/app.component.scss
@@ -1,42 +1,24 @@
 :host {
   position: relative;
-  overflow-x: hidden;
+  overflow: hidden;
   display: table;
   table-layout: fixed;
   border-spacing: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   padding: 20px;
+  background-color: #e4e4e4;
 
   .page-container {
     width: 100%;
-    min-height: 100%;
-    background-color: #e4e4e4;
+    height: 600px;
+    background-color: #ffffff;
     float: none;
     display: table-cell;
     vertical-align: top;
-    overflow-x: hidden;
+    overflow: hidden;
     position: relative;
     padding: 40px;
   }
 
-}
-
-.loader {
-  position: fixed;
-  opacity: 0.8;
-  width: 100vw;
-  height: 100vh;
-  z-index: 99999 !important;
-  top: 0;
-  left: 0;
-  background-color: #FFFFFF;
-  display: none;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-
-  &.visible {
-    display: flex;
-  }
 }
