feat: adiciona funcionalidade de editar e deletar tarefas

--- a/task-web/src/app/task/task-form/task-form.component.html
+++ b/task-web/src/app/task/task-form/task-form.component.html
@@ -1,6 +1,6 @@
 <div>
   <div class="top-bar">
-    <h1>Adicionar Tarefa</h1>
+    <h1>{{title}}</h1>
     <p-button [routerLink]="['']" label="Voltar" icon="pi pi-arrow-left" severity="secondary"></p-button>
   </div>
   <div>
