feat: adiciona toast e authGuard

--- a/task-web/src/app/app.component.html
+++ b/task-web/src/app/app.component.html
@@ -1,3 +1,4 @@
 <div class="page-container">
+  <p-toast position="bottom-right" [life]="3000"></p-toast>
   <router-outlet></router-outlet>
 </div>
